# p-computation

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
compiler/: BUILD.bazel  core.hpp  main.cc
compiler/conversion/: BUILD.bazel
compiler/dialect/: BUILD.bazel
compiler/dialect/ast/: BUILD.bazel  visitor.hpp
compiler/dialect/ast/builder/: builder.hpp
compiler/dialect/ast/types/: BUILD.bazel  block.hpp  declaritive.hpp  function.hpp  node.hpp  number.hpp  statement.hpp
compiler/dialect/grammar/: BUILD.bazel  elements.inl  literals.inl
compiler/dialect/parser/: BUILD.bazel  parser.cpp  parser.hpp
compiler/dialect/parser/tree/: tree.inl
compiler/dialect/parser/types/: function.hpp  node.hpp
compiler/dialect/view/: BUILD.bazel
compiler/emission/: BUILD.bazel
compiler/logging/: BUILD.bazel  log.cpp  log.hpp
compiler/test/: BUILD.bazel
compiler/test/assets/basic/: BUILD.bazel  basic.module.p  basic.p  lambda.p
compiler/test/dialect/: BUILD.bazel
compiler/test/logging/: BUILD.bazel  log.cc
compiler/test/utilities/: BUILD.bazel  utilities.cc
compiler/test/utilities/structure/: BUILD.bazel  bitmask.cc
compiler/translation/: BUILD.bazel
compiler/utilities/: BUILD.bazel  error.hpp
compiler/utilities/interface/: BUILD.bazel  error.hpp
compiler/utilities/structure/: BUILD.bazel  bitmask.inl
docs/: BUILD.bazel
