# pcomputation::compiler

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "core",
    hdrs = ["core.hpp"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_binary
cc_binary(
    name = "main",
    srcs = ["main.cc"],
    copts = [],
    linkopts = ["-pthread"],
    deps = [
        "@pcomputation//compiler/dialect/parser",
        "@pcomputation//compiler/logging:log",
    ],
)

exports_files(["LICENSE"])
