# pcomputation::compiler::logging

package(
    default_visibility = ["//visibility:public"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "log",
    srcs = [
        "log.cpp",
    ],
    hdrs = [
        "log.hpp",
    ],
    deps = [
        "@pcomputation//compiler:core",
        "@spdlog",
    ],
)
