# pcomputation::compiler::dialect::ast

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "visitor",
    hdrs = ["visitor.hpp"],
    deps = [
        "@pcomputation//compiler/dialect/grammar:elements",
    ],
)
