# pcomputation::compiler::dialect::grammer

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "elements",
    hdrs = ["elements.inl"],
    deps = [
        "@pcomputation//compiler/utilities/structure:bitmask",
    ],
)
