# pcomputation::compiler::dialect::parser

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "parser",
    srcs = ["parser.cpp"],
    hdrs = ["parser.hpp"],
    deps = [
        "@pcomputation//compiler/dialect/grammar:elements",
        "@pcomputation//compiler/logging:log",
        "@pcomputation//compiler/utilities:error",
    ],
)
