# pcomputation::compiler::dialect::parser

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "parser",
    srcs = ["parser.cpp"],
    hdrs = ["parser.hpp"],
    data = [
        "@pcomputation//compiler/test/assets/basic",
    ],
    deps = [
        "@pcomputation//compiler/dialect/grammar:elements",
        "@pcomputation//compiler/dialect/grammar:literals",
        "@pcomputation//compiler/logging:log",
        "@pcomputation//compiler/utilities/interface:error",
    ],
)
