# andromeda::andromeda::test::logging

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "log",
    srcs = [
        "log.cc",
    ],
    deps = [
        "@gtest",
        "@gtest//:gtest_main",
        "@pcomputation//compiler/logging:log",
    ],
)
