# pcomputation::compiler::utilities::interface

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "error",
    hdrs = ["error.hpp"],
    deps = ["@pcomputation//compiler/logging:log"],
)
