# pcomputation::compiler::dialect::ast::types

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "node",
    hdrs = ["node.hpp"],
    deps = [
        "@pcomputation//compiler/dialect/grammar:elements",
    ],
)

cc_library(
    name = "function",
    hdrs = ["literals.inl"],
    deps = [
        ":node",
    ],
)
