# pcomputation::compiler::test::utilities::structure

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "structure",
    srcs = [
        "bitmask.cc",
    ],
    deps = [
        "@gtest",
        "@gtest//:gtest_main",
        "@pcomputation//compiler/utilities/structure:bitmask",
    ],
)
